# Xpense

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
bugbro/: main.py  routes.py  types.py
bugbro/assets/: __init__.py
bugbro/components/: __init__.py
bugbro/components/common/: __init__.py
bugbro/components/layout/: app_bar.py  navigation_bar.py
bugbro/utilities/: calendar.py  household.py
bugbro/views/: __init__.py  view_builder.py
bugbro/views/calendar/: components.py  controls.py
bugbro/views/household/: category_button.py  controls.py  transactions_view.py
bugbro/views/household/common/: transaction_container.py
try_bt/: cert.pem  key.pem  main.py  register.py
xpense/: actions.py  types.py
xpense/components/layout/: __init__.py  app_bar.py  navigation_bar.py
xpense/database/: repository_container.py  sqlite_repository.py
xpense/utilities/: calendar.py  common.py  household.py
xpense/views/: view_builder.py
xpense/views/calendar/: components.py  controls.py
xpense/views/household/: action_button.py  balance_calculator.py  category_button.py  controls.py  expense_category_button.py  household_controls.py  transaction_add_view.py  transaction_category_button.py  transaction_fetcher.py  transaction_view.py  transactions_view.py
xpense/views/household/common/: transaction_container.py
