[tool.poetry]
name = "bugbro"
version = "0.1.0"
description = "Budgeting Application"
authors = ["Cristian Ciortea <cristiciortea.i@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
