[tool.poetry]
name = "xpense"
version = "0.1.0"
description = "Budgeting Application"
authors = ["Cristian Ciortea <cristiciortea.i@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet-route = "^0.3.3"
flet = "^0.24.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
